# kinglet-lsp

./: .gitignore  .gitmodules  .vscodeignore  BUILD.gn  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json
client/: extension.ts
scripts/: generate-icons.py  setup-deps.ps1  setup-deps.sh
server/: BUILD.gn
server/src/lsp/: analysis.cc  analysis.h  completion_resolver.cc  completion_resolver.h  completion_token.cc  completion_token.h  document_store.h  formatting.cc  formatting_test.cc  json.cc  nest_analysis.cc  nest_completion.cc  nest_completion.h  server.cc
tests/lsp/: lsp_completion_stress_test.py  lsp_completion_test.py  lsp_formatting_test.py  lsp_incremental_test.py  lsp_nest_walkup_test.py  run_formatting.sh
tests/lsp/cases/basic_spacing/: input.kl
tests/lsp/cases/completion_import_empty/: request.json
tests/lsp/cases/completion_import_mid_prefix/: expected.json  request.json
tests/lsp/cases/completion_import_prefix/: request.json
tests/lsp/cases/completion_namespace_access/: expected.json  kinglet.nest  request.json
tests/lsp/cases/incremental_ascii/: edits.json  expected.kl  initial.kl
tests/lsp/cases/incremental_utf16/: edits.json  expected.kl  initial.kl
tests/lsp/cases/nest_complete_build_default/: expected.json  kinglet.nest  request.json
tests/lsp/cases/nest_complete_modules/: expected.json  kinglet.nest  request.json
tests/lsp/cases/nest_complete_targets/: app.kl  expected.json  kinglet.nest  request.json
tests/lsp/cases/nest_diag_clean/: kinglet.nest
tests/lsp/cases/parse_error/: input.kl
(+11 files in other folders)
